--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,45 +5,58 @@ body
 
 /* HEADER */
 
-header {width: 90%; background-image: linear-gradient(#0895c4,#78bfd6) ; text-align: center; margin: auto;padding-bottom: 1.3em;}
-header img {padding-top: 2em;}
+header {width: 90%; background-image: linear-gradient(#0895c4,#78bfd6) ; text-align: center; margin: auto;margin-bottom: 1.3em;}
+header img {padding-top: 2em;max-width: 250px;}
 
-h3,nav  {color: white;font-weight: bold; padding: 1em;}
+h3,nav  {color: white;font-weight:bold; padding: 1em;}
 
 i { margin-right: 0.5em; margin-left: 0.5em;}
 
 
 /* MAIN */
 
-h2 {font-size: 1.8em;font-weight: bold;}
+h2 {font-size: 1.8em;font-weight: bold;padding-left: 0.5em;padding-top: 1em;padding-bottom: 1em;}
+h2+p {color: grey;padding-bottom: 1em;font-size: smaller;}
 
-#container,footer {background-color: white;width: 90%;margin: auto;}
+#container,footer {background-color: white;width: 90%;margin: auto;font-size: 14px;}
+main p,ol,ul{line-height: 1.5em;margin-left:1em;margin-right: 1em;padding-right: 1em;}
 
-
-h2,p,li, {margin: 0.5em;}
-.evidenzia {color: rgb(231, 0, 162);}
+h2,p,li, {padding: 1em;}
+.evidenzia {color: #e700a2;}
 .cornice {display: inline-block; background-color: rgb(221, 221, 221);border:solid black 1px;padding: 0.1em;border-radius:  10px;}
 
-ul {list-style-type: disc; margin: 2em 0em 2em 2em;}
-ol {list-style-type: decimal;margin: 2em 0em 2em 2em;}
-#video {text-align: center; max-width: 100%;}
+ #container ul {list-style-type: disc; margin: 2em 0em 2em 2em;}
+ol {list-style-type: decimal;margin: 2em 2em 2em 2em;}
+#video {text-align: center;}
+#video iframe {border-radius: 2em;}
 /* ELEMENTI NEL MAIN - ARTICLE */
 
 /* TABELLE */
-caption {font-style: italic;font-weight: bold;}
+
+caption {font-style: italic;font-weight: bold;padding-top: 1.8em;}
 
 
+th {background-color: #3b83f0;color: white;border: solid white 1px;padding: 2em 1em 2em 1em;}
+td {padding: 1em;}
+table {text-align: center;}
+tr {border-bottom: solid rgb(185, 185, 185) 1px;border-top:;}
+tbody tr:last-child {border-bottom: solid #3b83f0 1.5px;}
+table+p {padding-top: 2em;padding-bottom: 2em;}
 
-th {background-color: #3b83f0;color: white;}
 /* FORM */
+form p {font-size: larger;text-align: center;padding-top: 1em;}
+form
+ {background-color: lightgrey;text-align: center;padding:2em;margin: 1em;line-height: 2em;}
 
 /* ELEMENTI NELL' ASIDE correlati */
- 
+h5 {text-align: center;}
 .correlati { background-color: lightgray ; margin:1em; padding:1em
-;}
-.correlati .Data {text-align: end;}
+;line-height: 1.5em;}
+.correlati .Data {text-align: end;font-size: smaller;padding-top: 1em;}
 .correlati a {color: #3b83f0;}
 
 /* FOOTER */
-footer {background-image: linear-gradient(#3b83f0,#064155);text-align: center;color: white;}
+footer {background-image: linear-gradient(#3b83f0,#064155);text-align: center;color: white;font-size: 12px;padding-top:3em;padding-bottom: 3em;}
+#copyright {padding-bottom: 1em;}
+footer a {color: #e700a2;}
 
